--- a/src/app/pages/admin/doccompensation-sat-xml/doccompensation-sat-xml-detail/doccompensation-sat-xml-detail.component.html
+++ b/src/app/pages/admin/doccompensation-sat-xml/doccompensation-sat-xml-detail/doccompensation-sat-xml-detail.component.html
@@ -4,16 +4,26 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="form-group">
-                        <input nbInput fullWidth formControlName="idOficioSat" placeholder="Id oficio">
-                        <label class="text-danger" *ngIf="validateOpinion['idOficioSat'].hasError('pattern')"><small>Id oficio no
-                                válido!</small></label>
+                        <input nbInput fullWidth formControlName="idOficioSat" placeholder="Id oficio"
+                            [status]="(idOficioSat?.errors?.required || idOficioSat?.hasError('minlength') || idOficioSat?.hasError('maxlength') || idOficioSat?.hasError('pattern')) && idOficioSat.touched ? 'danger' : ''">
+                        <ngx-validation-message label="Id oficio" [showMinLength]="idOficioSat?.hasError('minlength')"
+                            [showMaxLength]="idOficioSat?.hasError('maxlength')"
+                            [showRequired]="idOficioSat?.errors?.required && idOficioSat.touched"
+                            [showPattern]="idOficioSat?.hasError('pattern') && idOficioSat.touched" minLength=1
+                            maxLength=255>
+                        </ngx-validation-message>
                     </div>
                 </div>
                 <div class="col-md-12">
                     <div class="form-group">
-                        <input nbInput fullWidth formControlName="typeDocSatXml" placeholder="Tipo documento">
-                        <label class="text-danger" *ngIf="validateOpinion['typeDocSatXml'].hasError('pattern')"><small>Tipo documento no
-                                válido!</small></label>
+                        <input nbInput fullWidth formControlName="typeDocSatXml" placeholder="Tipo documento"
+                            [status]="(typeDocSatXml?.errors?.required || typeDocSatXml?.hasError('minlength') || typeDocSatXml?.hasError('maxlength') || typeDocSatXml?.hasError('pattern')) && typeDocSatXml.touched ? 'danger' : ''">
+                        <ngx-validation-message label="Tipo documento" [showMinLength]="typeDocSatXml?.hasError('minlength')"
+                            [showMaxLength]="typeDocSatXml?.hasError('maxlength')"
+                            [showRequired]="typeDocSatXml?.errors?.required && typeDocSatXml.touched"
+                            [showPattern]="typeDocSatXml?.hasError('pattern') && typeDocSatXml.touched" minLength=1
+                            maxLength=255>
+                        </ngx-validation-message>
                     </div>
                 </div>
             </div>
