--- a/src/app/pages/admin/goods-subtype/goods-subtype-detail/goods-subtype-detail.component.html
+++ b/src/app/pages/admin/goods-subtype/goods-subtype-detail/goods-subtype-detail.component.html
@@ -3,34 +3,53 @@
         <form [formGroup]="form">
 
             <div class="form-group row">
-                <input nbInput fullWidth formControlName="nameGoodSubtype" matInput
-                    placeholder="Nombre Sub tipo bienes">
-                <label class="text-danger" *ngIf="validateGoodsSubtype['nameGoodSubtype'].hasError('pattern')"><small>No
-                        válido!</small></label>
+                <input nbInput fullWidth formControlName="nameGoodSubtype" placeholder="Nombre Sub tipo bienes"
+                    [status]="(nameGoodSubtype?.errors?.required || nameGoodSubtype?.hasError('minlength') || nameGoodSubtype?.hasError('maxlength') || nameGoodSubtype?.hasError('pattern')) && nameGoodSubtype.touched ? 'danger' : ''">
+                <ngx-validation-message label="Nombre Sub tipo bienes"
+                    [showMinLength]="nameGoodSubtype?.hasError('minlength')"
+                    [showMaxLength]="nameGoodSubtype?.hasError('maxlength')"
+                    [showRequired]="nameGoodSubtype?.errors?.required && nameGoodSubtype.touched"
+                    [showPattern]="nameGoodSubtype?.hasError('pattern') && nameGoodSubtype.touched" minLength=1
+                    maxLength=255>
+                </ngx-validation-message>
             </div>
 
             <div class="form-group row">
-                <input nbInput fullWidth formControlName="numberPhotographs" matInput
-                    placeholder="Numero de fotografias">
-                <label class="text-danger" *ngIf="validateGoodsSubtype['numberPhotographs'].hasError('pattern')"><small>No
-                        válido!</small></label>
+                <input nbInput fullWidth formControlName="numberPhotographs" placeholder="Numero de fotografias"
+                    [status]="(numberPhotographs?.errors?.required || numberPhotographs?.hasError('minlength') || numberPhotographs?.hasError('maxlength') || numberPhotographs?.hasError('pattern')) && numberPhotographs.touched ? 'danger' : ''">
+                <ngx-validation-message label="Numero de fotografias"
+                    [showMinLength]="numberPhotographs?.hasError('minlength')"
+                    [showMaxLength]="numberPhotographs?.hasError('maxlength')"
+                    [showRequired]="numberPhotographs?.errors?.required && numberPhotographs.touched"
+                    [showPattern]="numberPhotographs?.hasError('pattern') && numberPhotographs.touched" minLength=1
+                    maxLength=255>
+                </ngx-validation-message>
             </div>
 
             <div class="form-group row">
-                <input nbInput fullWidth formControlName="descFotographs" matInput
-                    placeholder="Descripcion fotografias">
-                <label class="text-danger" *ngIf="validateGoodsSubtype['descFotographs'].hasError('pattern')"><small>No
-                        válido!</small></label>
+                <input nbInput fullWidth formControlName="descFotographs" placeholder="Descripcion fotografias"
+                    [status]="(descFotographs?.errors?.required || descFotographs?.hasError('minlength') || descFotographs?.hasError('maxlength') || descFotographs?.hasError('pattern')) && descFotographs.touched ? 'danger' : ''">
+                <ngx-validation-message label="Descripcion fotografias"
+                    [showMinLength]="descFotographs?.hasError('minlength')"
+                    [showMaxLength]="descFotographs?.hasError('maxlength')"
+                    [showRequired]="descFotographs?.errors?.required && descFotographs.touched"
+                    [showPattern]="descFotographs?.hasError('pattern') && descFotographs.touched" minLength=1
+                    maxLength=255>
+                </ngx-validation-message>
             </div>
 
             <div class="form-group row">
-                <input nbInput fullWidth formControlName="version" matInput placeholder="Version">
-                <label class="text-danger" *ngIf="validateGoodsSubtype['version'].hasError('pattern')"><small>No
-                        válido!</small></label>
+                <input nbInput fullWidth formControlName="version" placeholder="Version"
+                    [status]="(version?.errors?.required || version?.hasError('minlength') || version?.hasError('maxlength') || version?.hasError('pattern')) && version.touched ? 'danger' : ''">
+                <ngx-validation-message label="Version" [showMinLength]="version?.hasError('minlength')"
+                    [showMaxLength]="version?.hasError('maxlength')"
+                    [showRequired]="version?.errors?.required && version.touched"
+                    [showPattern]="version?.hasError('pattern') && version.touched" minLength=1 maxLength=255>
+                </ngx-validation-message>
             </div>
 
-            <div class="form-group row">
-                <div class="offset-sm-3 col-sm-9">
+            <div class="form-group">
+                <div class="d-flex justify-content-center">
                     <button type="submit" nbButton status="primary" [disabled]="!form.valid"
                         (click)="register()">{{actionBtn}}</button>
                 </div>
