--- a/src/app/pages/admin/locality/locality-detail/locality-detail.component.html
+++ b/src/app/pages/admin/locality/locality-detail/locality-detail.component.html
@@ -2,37 +2,67 @@
     <nb-card-body>
         <form [formGroup]="formLocality">
             <div class="form-group row">
-                <input maxlength="30" nbInput fullWidth formControlName="key" matInput placeholder="Clave">
-                <label class="text-danger" *ngIf="validateLocality['key'].hasError('pattern')"><small>Ingrese un nombre válido!</small></label>
+                <input maxlength="30" nbInput fullWidth formControlName="key" placeholder="Clave"
+                    [status]="(key?.errors?.required || key?.hasError('minlength') || key?.hasError('maxlength') || key?.hasError('pattern')) && key.touched ? 'danger' : ''">
+                <ngx-validation-message label="Clave" [showMinLength]="key?.hasError('minlength')"
+                    [showMaxLength]="key?.hasError('maxlength')" [showRequired]="key?.errors?.required && key.touched"
+                    [showPattern]="key?.hasError('pattern') && key.touched" minLength=1 maxLength=255>
+                </ngx-validation-message>
             </div>
             <div class="form-group row">
-                <input maxlength="30" nbInput fullWidth formControlName="entityKey" matInput placeholder="Entidad">
-                <label class="text-danger" *ngIf="validateLocality['entityKey'].hasError('pattern')"><small>Ingrese un valor númerico!</small></label>
+                <input maxlength="30" nbInput fullWidth formControlName="entityKey" placeholder="Entidad"
+                    [status]="(entityKey?.errors?.required || entityKey?.hasError('minlength') || entityKey?.hasError('maxlength') || entityKey?.hasError('pattern')) && entityKey.touched ? 'danger' : ''">
+                <ngx-validation-message label="Entidad" [showMinLength]="entityKey?.hasError('minlength')"
+                    [showMaxLength]="entityKey?.hasError('maxlength')"
+                    [showRequired]="entityKey?.errors?.required && entityKey.touched"
+                    [showPattern]="entityKey?.hasError('pattern') && entityKey.touched" minLength=1 maxLength=255>
+                </ngx-validation-message>
             </div>
             <div class="form-group row">
                 <select class="form-control" formControlName="municipalityKey" title="Seleccione un municipio">
-                    <option selected disabled >Municipio</option>
+                    <option selected disabled>Municipio</option>
                     <option [value]="item.key" *ngFor="let item of municipalitys">{{item.municipalityName}}</option>
                 </select>
+                <ngx-validation-message label="Entidad" [showMinLength]="municipalityKey?.hasError('minlength')"
+                    [showMaxLength]="municipalityKey?.hasError('maxlength')"
+                    [showRequired]="municipalityKey?.errors?.required && municipalityKey.touched"
+                    [showPattern]="municipalityKey?.hasError('pattern') && municipalityKey.touched" minLength=1
+                    maxLength=255>
+                </ngx-validation-message>
             </div>
             <div class="form-group row">
-                <input maxlength="60" nbInput fullWidth formControlName="localityName" matInput placeholder="Localidad">
-                <label class="text-danger" *ngIf="validateLocality['localityName'].hasError('pattern')"><small>Ingrese una localidad válid!</small></label>
+                <input maxlength="60" nbInput fullWidth formControlName="localityName" placeholder="Localidad"
+                    [status]="(localityName?.errors?.required || localityName?.hasError('minlength') || localityName?.hasError('maxlength') || localityName?.hasError('pattern')) && localityName.touched ? 'danger' : ''">
+                <ngx-validation-message label="Localidad" [showMinLength]="localityName?.hasError('minlength')"
+                    [showMaxLength]="localityName?.hasError('maxlength')"
+                    [showRequired]="localityName?.errors?.required && localityName.touched"
+                    [showPattern]="localityName?.hasError('pattern') && localityName.touched" minLength=1 maxLength=255>
+                </ngx-validation-message>
             </div>
             <div class="form-group row">
-                <input maxlength="60" nbInput fullWidth formControlName="ambitKey" matInput placeholder="Amb. Clave">
-                <label class="text-danger" *ngIf="validateLocality['ambitKey'].hasError('pattern')"><small>Ingrese una amb. clave válida!</small></label>
+                <input maxlength="60" nbInput fullWidth formControlName="ambitKey" placeholder="Amb. Clave"
+                    [status]="(ambitKey?.errors?.required || ambitKey?.hasError('minlength') || ambitKey?.hasError('maxlength') || ambitKey?.hasError('pattern')) && ambitKey.touched ? 'danger' : ''">
+                <ngx-validation-message label="Amb. Clave" [showMinLength]="ambitKey?.hasError('minlength')"
+                    [showMaxLength]="ambitKey?.hasError('maxlength')"
+                    [showRequired]="ambitKey?.errors?.required && ambitKey.touched"
+                    [showPattern]="ambitKey?.hasError('pattern') && ambitKey.touched" minLength=1 maxLength=255>
+                </ngx-validation-message>
             </div>
             <div class="form-group row">
-                <input nbInput fullWidth formControlName="version" matInput placeholder="version">
-                <label class="text-danger" *ngIf="validateLocality['version'].hasError('pattern')"><small>Numero de versión no válida!</small></label>
+                <input nbInput fullWidth formControlName="version" placeholder="version"
+                    [status]="(version?.errors?.required || version?.hasError('minlength') || version?.hasError('maxlength') || version?.hasError('pattern')) && version.touched ? 'danger' : ''">
+                <ngx-validation-message label="version" [showMinLength]="version?.hasError('minlength')"
+                    [showMaxLength]="version?.hasError('maxlength')"
+                    [showRequired]="version?.errors?.required && version.touched"
+                    [showPattern]="version?.hasError('pattern') && version.touched" minLength=1 maxLength=255>
+                </ngx-validation-message>
             </div>
-            <div class="form-group row">
-                <div class="offset-sm-3 col-sm-9">
-                    <button type="submit" nbButton status="primary" [disabled]="!formLocality.valid" (click)="register()">{{actionBtn}}</button>
+            <div class="form-group">
+                <div class="d-flex justify-content-center">
+                    <button type="submit" nbButton status="primary" [disabled]="!formLocality.valid"
+                        (click)="register()">{{actionBtn}}</button>
                 </div>
             </div>
         </form>
     </nb-card-body>
 </nb-card>
-
